update files in 20230727

--- a/_posts/cpp_learning/指针与引用.md
+++ b/_posts/cpp_learning/指针与引用.md
@@ -9,3 +9,11 @@
 + nullptr是一个编译期常量，其类型为nullptr_t。它既不是整型类型，也不是指针类型；
 + 在模板推导中，nullptr被推导为nullptr_t类型，仍可隐式转为指针。但0或NULL则会被推导为整型类型；
 + 要避免在整型和指针间进行函数重载。因为NULL会被匹配到整型形参版本的函数，而不是预期的指针版本。
+
+## 左值和右值的区别
+
++ 左值是指可以出现在赋值运算符左边的变量，他有内存地址，是持久性的。
+
++ 右值是没有持久地址，只能出现在右边的变量，是一些临时的变量。
+
++ 右值引用是为了将一些临时右值给绑定到左值表达式上，可以实现持久引用。
