--- a/_posts/3d-object-detection/图像成像原理.md
+++ b/_posts/3d-object-detection/图像成像原理.md
@@ -56,3 +56,52 @@ tags:
 M2就是外参矩阵
 
 ## 5、总的投影矩阵
+
+当图像进行缩放或平移操作后，相机内参矩阵的焦距和主点位置会发生变化。下面举例说明图像变大和图像偏移后的相机内参变换。
+
+### 图像变大的情况：
+假设原始图像的相机内参矩阵为：
+
+```python
+[K] = [fx   0   cx]
+      [ 0  fy   cy]
+      [ 0   0    1]
+```
+假设图像进行了等比例的放大操作，放大因子为scale。新的图像尺寸为新宽度为scale * 原宽度，新高度为scale * 原高度。
+
+计算等效的焦距和主点位置：
+焦距的计算：等效的焦距为 fx/scale 和 fy/scale。
+主点位置的计算：假设不进行平移操作，等效的主点位置保持不变，即新的主点位置为 cx 和 cy。
+构建等效的相机内参矩阵：
+
+```python
+[K'] = [fx/scale  0        cx]
+       [0         fy/scale cy]
+       [0         0        1 ]
+```
+其中，K' 是新的相机内参矩阵，fx/scale 和 fy/scale 是等效的焦距，cx 和 cy 是等效的主点位置。
+
+### 图像偏移的情况：
+假设原始图像的相机内参矩阵为：
+
+```python
+[K] = [fx   0   cx]
+      [ 0  fy   cy]
+      [ 0   0    1]
+```
+假设图像进行了水平和垂直方向上的平移操作，平移量分别为 tx 和 ty。
+
+计算等效的焦距和主点位置：
+
+焦距的计算：等效的焦距保持不变，即新的焦距为 fx 和 fy。
+主点位置的计算：等效的主点位置为 (cx - tx, cy - ty)。
+构建等效的相机内参矩阵：
+
+```python
+[K'] = [fx   0   cx - tx]
+       [ 0  fy   cy - ty]
+       [ 0   0    1     ]
+```
+其中，K' 是新的相机内参矩阵，fx 和 fy 是等效的焦距，cx - tx 和 cy - ty 是等效的主点位置。
+
+需要注意的是，这里的示例仅考虑了简单的缩放和平移操作，并且假设没有发生图像畸变。实际上，如果存在图像畸变，还需要对畸变进行校正，并考虑更复杂的变换模型。这些示例仅提供了对相机内参变换的基本理解。
